# EduAnalyticsSystem

./: DEPLOYMENT_GUIDE.md  README.md  demo.py  edu_analytics.db  main.py  pyproject.toml  quick_start.sh  requirements.txt  run_system.py  test_imports.py
agents/: __init__.py  agent_manager.py  base_agent.py  data_analysis_agent.py  interface_management_agent.py  report_generation_agent.py
api/: __init__.py  routes.py
api/routes/: __init__.py  analysis.py  students.py
config/: __init__.py  database.py  ollama_config.py  settings.py
data_management/: __init__.py  student_service.py
models/: __init__.py  analysis.py  case.py  log.py  score.py  student.py
